--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_GITHUB_URL="https://api.github.com"
-REACT_APP_GITHUB_TOKEN="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"
+# REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_TOKEN="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"
